[tool.poetry]
name = "FastAPI-Utils"
version = "0.1.0.dev3"
description = "FastAPI Utilities"
authors = ["PhotonicGluon"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

fastapi = "^0.115.6"
pydantic = "^2.10.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
